--- a/styles/global.css
+++ b/styles/global.css
@@ -20,5 +20,9 @@
 
   --stroke-default: #D6D3D1;
   --stroke-highlight: #F3541C;
-  --semnatic-error: #DC2626;
+  --semantic-error: #DC2626;
+}
+
+body {
+  overflow: hidden;
 }
