--- a/styles/fields/index.css
+++ b/styles/fields/index.css
@@ -53,3 +53,21 @@ select {
   background: url(../../assets/icons/arrow-down-01.svg)
   no-repeat calc(100% - 1rem);
 }
+
+.address .flex {
+  gap: 1.25rem;
+}
+
+.input-wrapper:was([disabled]) {
+  opacity: .5;
+}
+
+input {
+  &[disabled] {
+    background-color: var(--surface-disabled);
+
+    border: 1px solid var(--stroke-default);
+
+    color: var(--text-primary);
+  }
+}
